rename update - respect owner

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
     <meta property="og:description"
-      content="Dive into endless hours of free streaming entertainment with Vid Binge! Join the binge-watching revolution and explore a world of movies and TV shows—all without a subscription." />
+      content="Dive into endless hours of free streaming entertainment with mkvcinemas! Join the binge-watching revolution and explore a world of movies and TV shows—all without a subscription." />
     <meta property="og:title"
-      content="Vid Binge - Stream Your Favorite Movies & TV Shows" />
+      content="mkvcinemas - Stream Your Favorite Movies & TV Shows" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.vidbinge.com" />
+    <meta property="og:url" content="https://mkvcinemas.buzz" />
     <meta property="og:image"
-      content="https://www.vidbinge.com/splash_screens/iPhone_15_Pro_Max__iPhone_15_Plus__iPhone_14_Pro_Max_landscape.png" />
+      content="https://mkvcinemas.buzz/splash_screens/iPhone_15_Pro_Max__iPhone_15_Plus__iPhone_14_Pro_Max_landscape.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -137,12 +137,12 @@
     <!-- disabling referrer can fix some provider problems -->
     <meta name="referrer" content="no-referrer" />
 
-    <title>Vid Binge | Stream Your Favorite Movies & TV Shows</title>
+    <title>mkvcinemas | Stream Your Favorite Movies & TV Shows</title>
 
     {{#if opensearchEnabled }}
     <!-- OpenSearch -->
     <link rel="search" type="application/opensearchdescription+xml"
-      title="movie-web" href="https://www.vidbinge.com/opensearch.xml">
+      title="movie-web" href="https://mkvcinemas.buzz/opensearch.xml">
 
     <!-- Google Sitelinks -->
     <script type="application/ld+json">
